force-app/main/default/objects/Judgement_Case_Violations__c/Judgement_Case_Violations__c.object-meta.xml
<CustomObject>
    <description>Junction object between judgements and violations. Used by Conga and the PostCasePaymentController apex class.</description>
    <label>Judgment Case Violation</label>
    <nameField>
        <displayFormat>JCV-{0}</displayFormat>
        <label>Judgment Case Violations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Judgment Case Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>