force-app/main/default/objects/Judgement_Case_Violations__c/fields/Liability_Judgement__c.field-meta.xml
<CustomField>
    <fullName>Liability_Judgement__c</fullName>
    <label>Liability Judgment</label>
    <referenceTo>Liability_Judgement__c</referenceTo>
    <relationshipLabel>Judgment Case Violations</relationshipLabel>
    <relationshipName>Judgement_Case_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>