force-app/main/default/objects/Judgement_Case_Violations__c/fields/Violation_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Violation_Penalty__c</fullName>
    <formula>( Case_Violation__r.Citation_Amount__c  +  Case_Violation__r.Wages_Due__c ) * Liability_Judgement__r.Liable_Party__r.Proportionate_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violation Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>